# PyBambooHR

./: .gitignore  AUTHORS  CHANGES  README.md  TODO.md  flake.nix  pyproject.toml
.github/workflows/: ci.yml
PyBambooHR/: PyBambooHR.py  __init__.py  utils.py
tests/: test_employees.py  test_integration.py  test_misc.py  test_reports.py
